# tetris-sdl

./: .dir-locals.el  CMakeLists.txt  README.md  tetris.c  tetris.org
